PIYOVI - UPS and Fedx changes

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ PIYOVIAPIAutomation/.project
 *.prefs
 *.log
 PIYOVIAPIAutomation/target/test-classes/PayLoads/Carriers/FedEx/createshipmentold.json
+*.xml
+*.html
+*.properties
+*.js
+*.png
+*.json
+*.class
+*.lst
+*.css
