--- a/PIYOVIAPIAutomation/pom.xml
+++ b/PIYOVIAPIAutomation/pom.xml
@@ -41,6 +41,11 @@
             <version>2.0.5</version>
         </dependency>
         <dependency>
+  <groupId>org.projectlombok</groupId>
+  <artifactId>lombok</artifactId>
+  <version>1.18.22</version>
+</dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.5</version>
