--- a/PIYOVIAPIAutomation/pom.xml
+++ b/PIYOVIAPIAutomation/pom.xml
@@ -80,6 +80,11 @@
       <version>4.1.0</version>
       <classifier>no_aop</classifier>
     </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
