--- a/PIYOVIAPIAutomation/properties/config.properties
+++ b/PIYOVIAPIAutomation/properties/config.properties
@@ -1,1 +1,6 @@
 baseURI = https://carrierdev.piyovi.io
+
+
+################## HEADLESS ########################################
+
+baseURL_Headless = https://apidev.piyovi.io/v1
