Parameterization and reporting

--- a/PIYOVIAPIAutomation/properties/config.properties
+++ b/PIYOVIAPIAutomation/properties/config.properties
@@ -1,6 +1,6 @@
+baseURI_DEV = https://carrierdev.piyovi.io
+baseURI_UAT = https://carrieruat.piyovi.io
 baseURI = https://carrierdev.piyovi.io
-
-
+testEnv=${testEnv}
 ################## HEADLESS ########################################
-
 baseURL_Headless = https://apidev.piyovi.io/v1
